# autonomous-influencer-infrastructure

./: ADR.md  AMENDMENT_SUMMARY.md  Dashboard.tsx  Dockerfile  INTEGRATION_GUIDE.md  MCP_INTERACTION_LOG.md  MCP_STATUS.md  Makefile  Makefile_Reference.md  README.md  SECURITY.md  SPEC.md  Task_3.1_summary.md  Task_3.2_summary.md  Task_3.3_Complete.md  bug_report.md  coderabbit.yaml  dependabot.yml  docker-compose.yml  dockerignore  env.example  feature_request.md  frontend.md  package.json  pull_request_template.md  pyproject.toml  spec_check.py  speckit.json  triggers_handler.py
.cursor/rules/: CLAUDE.md
.github/workflows/: main.yml  spec-check.yml
automation/: runner.py
docs/: ADR-015-security.md  agentic-trajectory.md
mcp/: config.yaml  validate_config.py
research/: tooling_strategy.md
skills/: README.md
skills/engagment/social_publisher/tests/: skill.py  skill.yaml
skills/generation/caption_writer/tests/: skill.py  skill.yaml
skills/perception/trend_detector/tests/: skill.py  skill.yaml
specs/: _meta.md  functional.md  openclaw_integration.md  technical.md
specs/acceptance/: frontend.feature  judge.feature  planner.feature  traceability.yml  worker.feature
tests/functional/: test_planner.py  test_skills_interface.py  test_task_schema.py  test_trend_fetcher.py
