[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Project Chimera Team", email = "team@projectchimera.ai"}
]
keywords = ["ai", "agents", "influencer", "autonomous", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core runtime dependencies
dependencies = [
    # Pydantic for data validation
    "pydantic>=2.7.0",
    "pydantic-ai>=0.0.14",
    "pydantic-settings>=2.2.0",
    
    # Model Context Protocol
    "mcp>=1.1.0",
    
    # Data layer
    "redis>=5.0.0",
    "weaviate-client>=4.5.0",
    "psycopg[binary]>=3.1.0",
    "sqlalchemy>=2.0.0",
    
    # Blockchain / Wallet
    "coinbase-agentkit>=0.0.9",
    
    # Web framework (for dashboard/API)
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    
    # LLM providers
    "anthropic>=0.30.0",
    "openai>=1.35.0",
    
    # Security & Authentication
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    
    # Code quality
    "black>=24.3.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    
    # Development tools
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# Tool Configurations
# ============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["F401", "F811"]  # allow unused imports and redefinitions in tests

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

# Allow untyped calls for third-party libraries
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "weaviate.*",
    "mcp.*",
    "anthropic.*",
    "openai.*",
]
ignore_missing_imports = true

[tool.ruff.isort]
known-first-party = ["src"]
force-sort-within-sections = true
